glx/tests/valid/assertion-minimal.glx
assertions:
  assertion-12345678:
    version: "1.0"
    subject: person-a1b2c3d4
    claim: birth_date
    sources:
      - source-xyz12345
