glx/tests/invalid/assertion-missing-property.glx
# Invalid: Missing required 'claim' field
assertions:
  assertion-12345678:
    version: "1.0"
    subject: person-a1b2c3d4
    sources:
      - source-xyz12345
